# MinecraftCPP

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
Engine/assets/shaders/: basic.frag  basic.vert
Engine/include/: Application.hpp  ApplicationConfig.hpp  InputAction.hpp  InputSystem.hpp  Window.hpp
Engine/include/Engine/: Application.hpp  Window.hpp
Engine/include/Engine/Renderer/: IRenderer.hpp
Engine/include/Events/: Event.hpp  EventManager.hpp  KeyEvent.hpp  KeyPressedEvent.hpp  WindowCloseEvent.hpp
Engine/include/Renderer/: IRenderer.hpp  Mesh.hpp  MeshFactory.hpp  OpenGL.hpp  OpenGLRenderer.hpp  Shader.hpp  Texture.hpp  Vertex.hpp
Engine/src/: Application.cpp  InputSystem.cpp  OpenGLRenderer.cpp  Window.cpp
Engine/src/Events/: EventManager.cpp
Engine/src/Renderer/: Mesh.cpp  MeshFactory.cpp  OpenGLRenderer.cpp  Shader.cpp  Texture.cpp
Game/src/: load_image.cpp  main.cpp
assets/: simple_shader.vert  simple_shader.vert.spv
docs/: my_engine_device.md
include/: mesh.hpp  shader.hpp  window.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  Makefile  _main.cpp  app.cpp  device.cpp  engine_device.cpp  main.cpp  pipeline.cpp  setUp.cpp  shader.cpp  window.cpp
src/include/: app.hpp  device.hpp  engine_device.hpp  pipeline.hpp  setUp.hpp  utils.hpp  window.hpp
